# Tristan_Tardif-Morency_TFUGAG

./: CHANGELOG.md  CONTRIBUTING.md  README.md
data/: repo_sync_manifest.json
docs/: AIRGAP_PROTOCOL.md  CANON_MAP.md  CANON_ROLE_2026_06_18.md  CLAIMS_INDEX.md  CLAIM_STATUS_SCHEMA.md  DCT_OMEGA_CARD.md  JKD_SAFE_ROUTE.md  KNOWLEDGE_ATOM_SCHEMA.md  MAIN_UPDATE_POLICY.md  NEXT_ACTIONS.md  OAK_AIRGAP_HANDOFF_TEMPLATE.md  OMEGA_GITHUB_CONNECTOR_LAYER.md  OMEGA_GRAPH_ROADMAP.md  REVIEW_ORDER.md  REVIEW_SCORE.md
omega-ait2-generator/: README.md  pyproject.toml
omega-ait2-generator/agents/: core_swarm.yaml
omega-ait2-generator/docs/: theory.md
omega-ait2-generator/src/ait2/: __init__.py  cli.py  cvcd.py  generator.py  hgfm.py  oak.py  specs.py
omega-ait2-generator/tests/: test_core.py
src/: tfuga_agent_bridge.py  tfuga_airgap.py  tfuga_ait_omnigenesis.py  tfuga_atlas_builder.py  tfuga_atom_factory.py  tfuga_bridge_engine.py  tfuga_canon_evolution.py  tfuga_causal_model_registry.py  tfuga_circuit_breaker.py  tfuga_contradiction_engine.py  tfuga_discovery_market.py  tfuga_evidence_graph.py  tfuga_experiment_registry.py  tfuga_fractal_atlas_engine.py  tfuga_fractal_mycelium_runtime.py  tfuga_frontier_detector.py  tfuga_graph.py  tfuga_main_agent_validator.py  tfuga_meta_evolution_engine.py  tfuga_meta_governance.py  tfuga_model_interaction_bus.py  tfuga_oak_quarantine.py  tfuga_omega_atlas_engine.py  tfuga_omega_contradiction_engine.py  tfuga_omega_evidence_engine.py  tfuga_omega_evolution_engine.py  tfuga_omega_frontier_engine.py  tfuga_omega_graph.py  (+16 more)
(+91 files in other folders)
