[project]
name = "omega-ait2-generator"
version = "0.1.0"
description = "Minimal OAK-validated generator for AIT research agents."
requires-python = ">=3.10"
authors = [{ name = "Tristan Tardif-Morency" }]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
ait2 = "ait2.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
